Update MainActivity.kt and strings.xml
Small changes made while finishing a tutorial video

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">pupBuddyM</string>
+    <string name="cameraPermissionDenied">Unable to load camera without permission.</string>
 </resources>
