--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="gps_location">Current GPS Location</string>
     <string name="get_image">Capture image</string>
     <string name="captured_image">Captured image</string>
+    <string name="success">We did it</string>
 </resources>
